fix: global styles

--- a/sources/front-end/static/global.css
+++ b/sources/front-end/static/global.css
@@ -63,7 +63,7 @@ body {
   ;
   grid-template-rows: auto 1fr auto;
 
-  background-color: var(--theme-white);
+  background-color: var(--theme-dark_gray);
 }
 
 body, #app {
